# Arti

./: .dockerignore  .gitignore  .nextflow.log.1  .nextflow.log.2  API_ARCHITECTURE.md  CANNED_TEXT_INTEGRATION_COMPLETE.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  CLI_usage_and_tests.sh  COMPLETION_CHECKLIST.md  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.minimal  README.md  TODO.md  USAGE.md  claude_next_instructions.md  cli.py  comprehensive_af_template.tsv  docker-compose.yml  generate_erd.py  gnomad.genomes.v4.0.sites.chr1.vcf.bgz.tbi  gnomad.genomes.v4.1.sites.chr12.vcf.bgz.tbi  gnomad.genomes.v4.1.sites.chr2.vcf.bgz.tbi  gnomad.genomes.v4.1.sites.chr3.vcf.bgz.tbi  gnomad.genomes.v4.1.sites.chr7.vcf.bgz.tbi  gnomad_real_afs.csv  outline.txt  pyproject.toml  real_ensembl_afs.tsv  requirements-api.txt  setup.sh  setup_env.sh  test_canned_text_integration.py  test_cli_integration.py  test_gnomad_afs.tsv  test_integration.py  test_performance_optimization.py  test_pipeline_output.json
.nextflow/: history
config/: thresholds.yaml  tumor_drivers.yaml
docker/: Dockerfile
docs/: AMP_ASCO_TIERS_AND_EVIDENCE.md  ANNOTATION_BLUEPRINT.md  ANNOTATION_VISUALIZATION_SPEC.md  API_ROUTING.md  API_ROUTING_SPECIFICATION.md  ARTI_UI_SPECIFICATION.md  CANNED_TEXT_TYPES.md  CGC_VICC_IMPLEMENTATION.md  CLINICAL_GUIDELINES_MAPPING.md  COMPLETION_ROADMAP.md  CONFIGURATION_MANAGEMENT.md  CURRENT_DATABASE_ERD.dot  CURRENT_DATABASE_SCHEMA_TEXT.md  CURRENT_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_BLUEPRINT.md  DOCUMENTATION_INDEX.md  EVIDENCE_SCORING_REFACTORING.md  EXPANDED_DATABASE_SCHEMA.md  FLOW_VISUALIZATION.md  FRONTEND_API_SCHEMA.md  FRONTEND_SPECIFICATION.md  GA4GH_INTEGRATION_PLAN.md  GNOMAD_AF_EXTRACTION_GUIDE.md  GNOMAD_FULL_EXTRACTION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  (+32 more)
(+408 files in other folders)
