[tool.poetry]
name = "annotation-engine"
version = "0.0.1"
description = "Minimal AMP/CGC/OncoKB annotation starter"
authors = ["Annotation Engine <annotation@genomics.com>"]
packages = [{ include = "annotation_engine", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.7"
click = "^8.1"
pandas = "^2.2"
numpy = "^1.24,<2.0"
fastapi = "^0.104"
uvicorn = "^0.24"
pyyaml = "^6.0"
httpx = "^0.25"
pysam = "^0.22"
vcfpy = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff   = "^0.4"

[tool.poetry.scripts]
annotation-engine = "annotation_engine.cli:main"
