[tool.poetry]
name = "annotation-engine"
version = "0.0.1"
description = "Minimal AMP/CGC/OncoKB annotation starter"
authors = ["Annotation Engine <annotation@genomics.com>"]
packages = [{ include = "annotation_engine", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.7"
click = "^8.1"
pandas = "^2.2"
numpy = "^1.24,<2.0"
fastapi = "^0.104"
uvicorn = "^0.24"
pyyaml = "^6.0"
httpx = "^0.25"
pysam = "^0.23"
vcfpy = "^0.13"
sqlalchemy = "^2.0"
pybigwig = "^0.3.24"
tqdm = "^4.66"
ga4gh-vrs = "^2.1.2"
biocommons-seqrepo = "^0.6.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff   = "^0.4"
psycopg2-binary = "^2.9.10"

[tool.poetry.scripts]
annotation-engine = "annotation_engine.cli:main"
